@@ -10,3 +10,6 @@
 
         * Issues deteced by Static Code Analysis fixed
 
+2013-10-01
+
+	* Signal visible-data-changed support implemented for clock and datetime widgets
